<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReadAssist</string>
    <string name="action_settings">Settings</string>
    <string name="button_Retake">Retake</string>
    <string name="ttsButton">Read</string>
    <string name="translateButton">Translate</string>
    <string name="editor_button">Editor</string>
    <string name="title_activity_editor">Editor</string>
    <string name="pasteButton">Paste</string>
    <string name="copyButton">Copy</string>
    <string name="textSize">Text size</string>
    <string name="textEditor">Edit text here</string>
    <string name="historyButton">History</string>
    <string name="title_activity_crop">Crop</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="spanish">Spanish</string>
    <string name="holla">Holla</string>
    <string name="english">English</string>
    <string name="text_to_be_translated">Text to be translated</string>
    <string name="hey">Hey</string>
    <string name="speak">speak</string>
    <string name="ok">OK</string>
    <string name="title_activity_mongo">MongoActivity</string>
    <string name="mongolab_api_key">tsisfUKNMc_Iud0sLsZbyZUXHe5rTYNl</string>
    <string name="title_activity_history">History</string>
    <string name="text_to_be_uploaded">Text uploaded</string>
    <string name="submit">Submit</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>

</resources>