<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="right"
    android:orientation="vertical"
    tools:context=".LinearLayout" >

    <Button
        android:id="@+id/buttonRetake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="retake"
        android:text="@string/button_Retake" />
    
    
		<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:context=".MainActivity" >

        <Button
            android:id="@+id/buttonTranslate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:onClick="callTranslate"
            android:text="@string/translateButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:onClick="openEditor"
            android:text="@string/editor_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonRead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/ttsButton"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

	<TextView
	    android:id="@+id/myAwesomeTextView"
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="2.09"
	    android:maxLines="100"
	    android:scrollbarAlwaysDrawVerticalTrack="true"
	    android:scrollbars="vertical"
	    android:textSize="50sp" />

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:context=".MainActivity" >

	<Button
	    android:id="@+id/buttonUpload"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight=".5"
	    android:onClick="upload"
	    android:text="@string/upload" />

	<Button
	    android:id="@+id/buttonHistory"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight=".5"
	    android:onClick="history"
	    android:text="@string/historyButton" />

</LinearLayout>
</LinearLayout>