<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="right|top"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="copyToClipboard"
            android:text="@string/copyButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/paste"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:enabled="true"
            android:onClick="paste"
            android:text="@string/pasteButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonRead"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:drawableLeft="@drawable/ic_action_search"
            android:paddingLeft="30dip"
            android:onClick="onSearchClick"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/tick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:paddingLeft="30dip"
            android:drawableLeft="@drawable/ic_action_accept"
            android:onClick="finishEdit"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/PRICEtextViewProgressID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textSize"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/PRICEseekBarID"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="30"
            android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
            android:scrollbars="horizontal"
            android:thumb="@drawable/apptheme_scrubber_control_normal_holo" />

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="3.97"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/textEditor"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>